implement news section

--- a/view/admin/admin.scss
+++ b/view/admin/admin.scss
@@ -528,8 +528,9 @@
   white-space: nowrap;
 }
 
-.text-center {
-  text-align: center;
+.news-header {
+  text-align: right;
+  background-color: #28a745;
 }
 
 .borderCardMember .wrap-card-bottom .card-bottom #power-by {
