--- a/view/admin/scss/admin.css
+++ b/view/admin/scss/admin.css
@@ -9220,6 +9220,9 @@ button.bg-dark:focus {
 .text-center {
   text-align: center !important;
 }
+.news-header{
+  text-align: right;
+}
 
 @media (min-width: 576px) {
   .text-sm-left {
