implement news section

--- a/view/home/home.scss
+++ b/view/home/home.scss
@@ -773,9 +773,14 @@ label {
   background-color: #4d983c;
   padding-left: 40px;
 }
-.float-left{
-  float: left;
+// .float-left{
+//   float: left;
+// }
+
+.float-right{
+  float: right;
 }
+
 .news-container{
   max-width: 735px;
   height: 350px;
