implement news detail

--- a/view/home/home.scss
+++ b/view/home/home.scss
@@ -772,9 +772,7 @@ label {
   text-align: left;
   background-color: #4d983c;
   padding-left: 40px;
-}
-.float-left{
-  float: left;
+  margin-bottom: 10px;
 }
 
 .float-right{
@@ -821,7 +819,7 @@ label {
 }
 
 .border-test{
-  border: 1px black solid;
+  border: 10px black solid;
 }
 .news-title{
   padding-left: 15px;
