--- a/view/home/home.scss
+++ b/view/home/home.scss
@@ -819,6 +819,12 @@ label {
   float: right;
   cursor: pointer;
 }
+.viewmode-btn{
+  bottom: 0px;
+  border: none;
+  cursor: pointer;
+  width: 70px;
+}
 
 
 
