fix border-bottom lastchild

--- a/view/home/home.scss
+++ b/view/home/home.scss
@@ -783,9 +783,9 @@ label {
 .news-abstract{
   font-size:13px;
   text-overflow: ellipsis;
-  //overflow: hidden;
+  overflow: hidden;
   //border: 1px solid black;
-  height: 24px;
+  height: 75px;
   //white-space: nowrap;
   max-width: 100%;
   padding-left: 15px;
