Cập nhật package.json

--- a/view/admin/admin.pug
+++ b/view/admin/admin.pug
@@ -22,6 +22,8 @@ html(lang='en')
         script(type='text/javascript' src='/js/plugins/jsBarcode.all.min.js')
         script(type='text/javascript' src='/js/plugins/qrcode.min.js')
         //script(type='text/javascript' src='https://cdn.ckeditor.com/4.10.1/full/ckeditor.js')
-        script(type='text/javascript' src=htmlWebpackPlugin.files.chunks.admin.entry)
+        each item in htmlWebpackPlugin.files.js
+            if item.indexOf('/js/admin.js?') == 0
+                script(type='text/javascript' src=item)
         link(rel='stylesheet' type='text/css' href='/css/bootstrap-datetimepicker.min.css')
         //- link(rel='stylesheet' type='text/css' href='/css/admin.css')
