--- a/view/home/home.pug
+++ b/view/home/home.pug
@@ -24,4 +24,6 @@ html(lang='en')
         script(src='/js/plugins/bootstrap-notify.min.js')
         script(src='/home/js/plugins.min.js')
         script(src='/home/js/active.min.js')
-        script(src=htmlWebpackPlugin.files.chunks.home.entry)
+        each item in htmlWebpackPlugin.files.js
+            if item.indexOf('/js/home.js?') == 0
+                script(type='text/javascript' src=item)
