--- a/view/home/scss/_theme_color.scss
+++ b/view/home/scss/_theme_color.scss
@@ -7,6 +7,7 @@ $text-color: #5a5a5a;
 // Default Background
 //$bg-default: #3762f0;
 $bg-default: #4ca758;
+$bg-hover: #aaebb2;
 
 // Gray Background
 $bg-gray: #f7f7f7;
