--- a/view/home/home.scss
+++ b/view/home/home.scss
@@ -111,19 +111,16 @@
         left: 50%;
         -webkit-transform: translate(-50%, -50%);
         transform: translate(-50%, -50%);
-
         a {
             -webkit-transition-delay: 0s;
             transition-delay: 0s;
         }
-
         h2 {
             margin: 0 auto;
             max-width: 840px;
             color: #FFFFFF;
             -webkit-text-stroke: 1px black;
         }
-
         p {
             color: #FFFFFF;
             font-size: 14px;
@@ -593,10 +590,12 @@ label {
         width: 100%;
         height: 100%;
         //background-color: rgba(0, 0, 0, 0.1);
-        background: #DAD299;  /* fallback for old browsers */
-        background: -webkit-linear-gradient(to right, #B0DAB970, #DAD29970);  /* Chrome 10-25, Safari 5.1-6 */
-        background: linear-gradient(to right, #B0DAB970, #DAD29970); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
-
+        background: #DAD299;
+        /* fallback for old browsers */
+        background: -webkit-linear-gradient(to right, #B0DAB970, #DAD29970);
+        /* Chrome 10-25, Safari 5.1-6 */
+        background: linear-gradient(to right, #B0DAB970, #DAD29970);
+        /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
     }
 }
 
@@ -605,7 +604,8 @@ label {
     width: 100%;
     top: 45%;
     z-index: 50;
-    .owl-prev, .owl-next {
+    .owl-prev,
+    .owl-next {
         cursor: pointer;
         background-color: $bg-default;
         border: 1px solid $bg-default;
@@ -617,12 +617,10 @@ label {
         padding: 0.375rem 0.75rem;
         font-size: 1rem;
         line-height: 1.5;
-
         &:focus {
             outline: none;
         }
     }
-
     .owl-next {
         float: right;
     }
