--- a/view/home/scss/style.scss
+++ b/view/home/scss/style.scss
@@ -5,6 +5,7 @@
 
 /* [Master Stylesheet v1.0] */
 
+
 /* :: 1.0 Import Fonts */
 
 @import url('https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700|Raleway:300,400,500,600,700');
@@ -41,7 +42,6 @@ h6 {
     color: $heading-color;
     line-height: 1.3;
     font-weight: 700;
-
 }
 
 p {
@@ -75,6 +75,7 @@ img {
     height: auto;
     max-width: 100%;
 }
+
 
 /* Spacing */
 
@@ -142,6 +143,7 @@ img {
     margin-right: 50px !important;
 }
 
+
 /* Height */
 
 .height-400 {
@@ -163,6 +165,7 @@ img {
 .height-800 {
     height: 800px !important;
 }
+
 
 /* Section Padding */
 
@@ -186,6 +189,7 @@ img {
     padding-bottom: 70px;
 }
 
+
 /* Preloader */
 
 #preloader {
@@ -207,7 +211,6 @@ img {
         margin: auto;
         @include animation(sk-rotateplane 1.2s infinite ease-in-out);
     }
-
     @-webkit-keyframes sk-rotateplane {
         0% {
             @include transform(perspective(120px));
@@ -219,7 +222,6 @@ img {
             @include transform(perspective(120px) rotateY(180deg) rotateX(180deg));
         }
     }
-
     @keyframes sk-rotateplane {
         0% {
             @include transform(perspective(120px));
@@ -232,6 +234,7 @@ img {
         }
     }
 }
+
 
 /* Section Heading */
 
@@ -256,6 +259,7 @@ img {
         }
     }
 }
+
 
 /* Miscellaneous */
 
@@ -374,6 +378,7 @@ textarea:focus {
     border-color: transparent;
 }
 
+
 /* ScrollUp */
 
 #scrollUp {
@@ -398,6 +403,7 @@ textarea:focus {
         right: 30px;
     }
 }
+
 
 /* Button */
 
@@ -437,6 +443,7 @@ textarea:focus {
         }
     }
 }
+
 
 /* :: 4.0 Header Area */
 
@@ -675,6 +682,7 @@ textarea:focus {
     }
 }
 
+
 /* :: 5.0 Hero Area */
 
 .hero-area {
@@ -692,6 +700,7 @@ textarea:focus {
         }
     }
 }
+
 
 /* :: 6.0 Cool Facts Area */
 
@@ -716,6 +725,7 @@ textarea:focus {
         color: $heading-color;
     }
 }
+
 
 /* :: 7.0 Courses Area */
 
@@ -1472,6 +1482,7 @@ textarea:focus {
     }
 }
 
+
 /* :: 8.0 Upcoming Events */
 
 .single-upcoming-events {
@@ -1557,6 +1568,7 @@ textarea:focus {
         }
     }
 }
+
 
 /* :: 9.0 Register Now */
 
@@ -1680,6 +1692,7 @@ textarea:focus {
     }
 }
 
+
 /* :: 10.0 Best Tutors Area */
 
 .single-tutors-slides {
@@ -1774,6 +1787,7 @@ textarea:focus {
         right: 0;
     }
 }
+
 
 /* :: 11.0 Blog Area */
 
@@ -2028,6 +2042,7 @@ textarea:focus {
     }
 }
 
+
 /* :: 12.0 Breadcumb Area */
 
 .breadcumb-area {
@@ -2132,6 +2147,7 @@ textarea:focus {
     }
 }
 
+
 /* :: 13.0 Contact Area */
 
 .contact--info {
@@ -2219,6 +2235,7 @@ textarea:focus {
     height: 400px;
 }
 
+
 /* :: 14.0 Page Content */
 
 .page-content {
@@ -2241,6 +2258,7 @@ textarea:focus {
     }
 }
 
+
 /* :: 15.0 Footer Area */
 
 .top-footer-area {
@@ -2257,10 +2275,10 @@ textarea:focus {
     p {
         margin-bottom: 0;
         font-size: 12px;
-        color: rgba(255, 255, 255, 0.2);
+        color: #454547;
         font-family: $opensans-font;
         a {
-            color: rgba(255, 255, 255, 0.2);
+            color: #6B6B6D;
             font-size: 12px;
             font-family: $opensans-font;
             &:hover,
