--- a/view/home/scss/style.scss
+++ b/view/home/scss/style.scss
@@ -538,6 +538,29 @@ textarea:focus {
     .classy-navbar {
         height: 80px;
     }
+
+    @media only screen and (max-width:991px) {
+        .navbar-brand {
+            width: 100%;
+        }
+    }
+
+    @media only screen and (max-width:576px) {
+        .navbar-brand {
+            width: 80%;
+        }
+
+        .classy-navbar {
+            a {
+               text-align: center;
+            }
+            h4 {
+                font-size: 13px;
+                overflow: hidden;
+            }
+        }
+    }
+
     .classynav ul li a {
         color: rgba(0, 0, 0, 0.45);
         font-weight: 600;
@@ -2264,22 +2287,32 @@ textarea:focus {
 .top-footer-area {
     position: relative;
     z-index: 1;
-    background-color: $footer-color;
     padding: 40px 0;
     text-align: center;
     border-bottom: 1px solid #4c4c4c;
+
+    &::before {
+        content: '';
+        position: absolute;
+        width: 100%;
+        height: 100%;
+        top: 0;
+        left: 0;
+        background: rgba($footer-color, 0.75);
+    }
+
     .footer-logo {
         display: block;
         margin-bottom: 15px;
     }
     p {
         margin-bottom: 0;
-        font-size: 12px;
+        font-size: 13px;
         color: #454547;
         font-family: $opensans-font;
         a {
             color: #6B6B6D;
-            font-size: 12px;
+            font-size: 13px;
             font-family: $opensans-font;
             &:hover,
             &:focus {
@@ -2294,7 +2327,7 @@ textarea:focus {
     z-index: 1;
     width: 100%;
     height: 40px;
-    background-color: #1f1f1f;
+    background-color: $bg-default;
     @media #{$breakpoint-xs} {
         @include flex-wrap(wrap);
         height: auto;
@@ -2344,7 +2377,7 @@ textarea:focus {
             height: 40px;
             padding: 0 20px;
             line-height: 40px;
-            color: rgba(255, 255, 255, 0.2);
+            color: rgba(255, 255, 255, 0.8);
             font-size: 12px;
             text-transform: uppercase;
         }
@@ -2353,7 +2386,7 @@ textarea:focus {
             height: 40px;
             padding: 0 20px;
             line-height: 40px;
-            color: rgba(255, 255, 255, 0.2);
+            color: rgba(255, 255, 255, 0.8);
             font-size: 12px;
             border-left: 1px solid #4c4c4c;
             span {
