--- a/view/home/home.pug
+++ b/view/home/home.pug
@@ -40,7 +40,7 @@ html(lang='en')
         script(src='/home/js/bootstrap-datepicker.js')
         script(src='/home/js/jquery.timepicker.min.js')
         script(src='/home/js/scrollax.min.js')
-        script(src='/home/js/google-map.js')
+        //script(src='/home/js/google-map.js')
         //script(src='/home/js/camera.min.js')
         //script(type='text/javascript' src='/js/plugins/bootstrap-datepicker.min.js')
         script(src='/js/plugins/bootstrap-notify.min.js')
