--- a/view/home/scss/style.scss
+++ b/view/home/scss/style.scss
@@ -1,5 +1,6 @@
 @import 'bootstrap/bootstrap';
 @import 'bootstrap/variables';
+@import 'css/classy-nav.min.css';
 
 $font-primary: 'Roboto',Arial, sans-serif;
 
