Classy nav, header

--- a/view/home/home.pug
+++ b/view/home/home.pug
@@ -44,7 +44,7 @@ html(lang='en')
         //script(src='/home/js/camera.min.js')
         //script(type='text/javascript' src='/js/plugins/bootstrap-datepicker.min.js')
         script(src='/js/plugins/bootstrap-notify.min.js')
-        script(src='/home/js/plugins.min.js')
+        script(src='/home/js/classyNav.min.js')
         //script(src='/home/js/active.min.js')
         each item in htmlWebpackPlugin.files.js
             if item.search(/\/js\/home-?.*.js/) == 0
