Classy nav, header

--- a/view/home/scss/style.scss
+++ b/view/home/scss/style.scss
@@ -8,7 +8,8 @@ $white: #fff;
 $black: #39345a;
 $darken: #7782aa;
 
-$primary: #167ce9;
+//$primary: #167ce9;
+$primary: #4ca758;
 
 
 @mixin gradient-background(){
