--- a/view/home/home.scss
+++ b/view/home/home.scss
@@ -2,6 +2,18 @@
 @import "./scss/bootstrap-datepicker";
 @import "./scss/theme_color";
 
+$breakpoint-xl: 'only screen and (min-width:1200px)';
+
+$breakpoint-lg: 'only screen and (min-width:992px) and (max-width:1199px)';
+
+$breakpoint-md: 'only screen and (min-width:768px) and (max-width:991px)';
+
+$breakpoint-sm: 'only screen and (min-width:576px) and (max-width:767px)';
+
+$breakpoint-xs: 'only screen and (max-width:767px)';
+
+$breakpoint-xs-landscape: 'only screen and (min-width:480px) and (max-width:767px)';
+
 .previousButton,
 .nextButton {
     position: absolute;
@@ -1145,54 +1157,6 @@
         &:hover,
         &:focus {
             color: $heading-color;
-        }
-    }
-    .search-area {
-        position: relative;
-        z-index: 1;
-        form {
-            position: relative;
-            z-index: 10;
-            width: 230px;
-            height: 40px;
-            margin: 0 50px;
-            @media #{$breakpoint-lg} {
-                width: 170px;
-                margin: 0 15px;
-            }
-            @media #{$breakpoint-md} {
-                margin: 15px auto;
-            }
-            @media #{$breakpoint-xs} {
-                margin: 15px auto;
-            }
-            input {
-                width: 100%;
-                height: 40px;
-                border-radius: 6px;
-                border: 1px solid $border-color;
-                padding: 0 15px 0 50px;
-                font-size: 14px;
-                color: rgba(0, 0, 0, 0.35);
-                font-weight: 600;
-                @include trans-duration(500ms);
-                &:focus {
-                    border: 1px solid rgba(0, 0, 0, 0.5);
-                }
-            }
-            button {
-                position: absolute;
-                width: 50px;
-                height: 40px;
-                background-color: transparent;
-                top: 0;
-                left: 0;
-                z-index: 10;
-                border: none;
-                text-align: center;
-                cursor: pointer;
-                outline: none;
-            }
         }
     }
 }
