--- a/public/home/styles/styles.css
+++ b/public/home/styles/styles.css
@@ -1520,6 +1520,24 @@ section
 	-o-transition: all 200ms ease;
 	transition: all 200ms ease;
 }
+.contact_input_subject
+{
+	width: 100%;
+	height: 62px;
+	background: transparent;
+	border: solid 2px #e6ebf1;
+	margin-bottom: 18px;
+	padding-left: 25px;
+	outline: none;
+	font-size: 15px;
+	color: #404040;
+	font-weight: 500;
+	-webkit-transition: all 200ms ease;
+	-moz-transition: all 200ms ease;
+	-ms-transition: all 200ms ease;
+	-o-transition: all 200ms ease;
+	transition: all 200ms ease;
+}
 .contact_select
 {
 	-webkit-appearance: none;
@@ -1655,7 +1673,7 @@ section
 }
 .contact_info ul li > div:first-of-type
 {
-	width: 90px;
+	width: 110px;
 	font-size: 18px;
 	font-weight: 600;
 	color: #4ca758;
@@ -1663,7 +1681,7 @@ section
 }
 .contact_info ul li > div:last-of-type
 {
-	max-width: 170px;
+	max-width: 200px;
 	font-size: 15px;
 	font-weight: 600;
 	color: #878787;
