--- a/view/home/home.scss
+++ b/view/home/home.scss
@@ -471,12 +471,12 @@ $breakpoint-xs-landscape: 'only screen and (min-width:480px) and (max-width:767p
 }
 
 // carousel 
-// .home
-// {
-// 	width: 100%;
-// 	height: 768px;
-// 	margin-top: 117px;
-// }
+.home
+{
+	width: 100%;
+	height: 768px;
+	margin-top: 117px;
+}
 // .home_slider_container
 // {
 // 	width: 100%;
