--- a/view/home/home.pug
+++ b/view/home/home.pug
@@ -22,6 +22,7 @@ html(lang='en')
         script(src='/home/js/jquery-3.2.1.min.js')
         script(src='/home/styles/bootstrap-4.1.2/popper.js')
         script(src='/home/styles/bootstrap-4.1.2/bootstrap.min.js')
+        script(src='/home/js/jquery.magnific-popup.min.js')
         script(src='/home/plugins/greensock/TweenMax.min.js')
         script(src='/home/plugins/greensock/TimelineMax.min.js')
         script(src='/home/plugins/scrollmagic/ScrollMagic.min.js')
