--- a/view/home/home.pug
+++ b/view/home/home.pug
@@ -15,6 +15,7 @@ html(lang='en')
         link(rel='stylesheet' type='text/css' href='/home/plugins/OwlCarousel2-2.2.1/owl.theme.default.css')
         link(rel='stylesheet' type='text/css' href='/home/plugins/OwlCarousel2-2.2.1/animate.css')
         link(rel='stylesheet' type='text/css' href='/home/plugins/jquery-datepicker/jquery-ui.css')
+        link(rel='stylesheet' type='text/css' href='/home/plugins/magnific-popup.css')
         link(rel='stylesheet' type='text/css' href='/home/styles/styles.css')
         link(rel='stylesheet' type='text/css' href='/home/styles/responsive.css')
     body
