--- a/public/home/plugins/OwlCarousel2-2.2.1/animate.css
+++ b/public/home/plugins/OwlCarousel2-2.2.1/animate.css
@@ -1444,12 +1444,14 @@
 @-webkit-keyframes fadeInUp {
   from {
     opacity: 0;
+    visibility: hidden;
     -webkit-transform: translate3d(0, 100px, 0) scale3d(0.5, 0.5, 1);
     transform: translate3d(0, 100px, 0) scale3d(0.5, 0.5, 1);
   }
 
   to {
     opacity: 1;
+    visibility: visible;
     -webkit-transform: none;
     transform: none;
   }
@@ -1458,12 +1460,14 @@
 @keyframes fadeInUp {
   from {
     opacity: 0;
+    visibility: hidden;
     -webkit-transform: translate3d(0, 100px, 0) scale3d(0.5, 0.5, 1);
     transform: translate3d(0, 100px, 0) sscale3d(0.5, 0.5, 1);
   }
 
   to {
     opacity: 1;
+    visibility: visible;
     -webkit-transform: none;
     transform: none;
   }
@@ -1526,12 +1530,14 @@
 @-webkit-keyframes fadeInUpBig {
   from {
     opacity: 0;
+    visibility: hidden;
     -webkit-transform: translate3d(0, 2000px, 0);
     transform: translate3d(0, 2000px, 0);
   }
 
   to {
     opacity: 1;
+    visibility: visible;
     -webkit-transform: none;
     transform: none;
   }
@@ -1540,12 +1546,14 @@
 @keyframes fadeInUpBig {
   from {
     opacity: 0;
+    visibility: hidden;
     -webkit-transform: translate3d(0, 2000px, 0);
     transform: translate3d(0, 2000px, 0);
   }
 
   to {
     opacity: 1;
+    visibility: visible;
     -webkit-transform: none;
     transform: none;
   }
