--- a/public/home/styles/styles.css
+++ b/public/home/styles/styles.css
@@ -675,10 +675,15 @@ section
 }
 .home_content
 {
+	max-width: 550px;
+}
+.home_text_content {
+	display: inline-block;
 	background: white;
   padding: 10px;
-  opacity: 0.8;
-	max-width: 550px;
+	opacity: 0.6;
+	border-radius: 5px;
+	box-shadow: 5px 15px 20px rgb(0 0 0 / 20%);
 }
 .home_subtitle
 {
