--- a/public/home/plugins/OwlCarousel2-2.2.1/animate.css
+++ b/public/home/plugins/OwlCarousel2-2.2.1/animate.css
@@ -1445,8 +1445,10 @@
   from {
     opacity: 0;
     visibility: hidden;
-    -webkit-transform: translate3d(0, 100px, 0) scale3d(0.5, 0.5, 1);
-    transform: translate3d(0, 100px, 0) scale3d(0.5, 0.5, 1);
+    -webkit-transform: translate3d(0, 40px, 0);
+    transform: translate3d(0, 40px, 0);
+    /*-webkit-transform: translate3d(0, 100px, 0) scale3d(0.5, 0.5, 1);*/
+    /*transform: translate3d(0, 100px, 0) scale3d(0.5, 0.5, 1);*/
   }
 
   to {
@@ -1461,8 +1463,10 @@
   from {
     opacity: 0;
     visibility: hidden;
-    -webkit-transform: translate3d(0, 100px, 0) scale3d(0.5, 0.5, 1);
-    transform: translate3d(0, 100px, 0) sscale3d(0.5, 0.5, 1);
+    -webkit-transform: translate3d(0, 40px, 0);
+    transform: translate3d(0, 40px, 0);
+    /*-webkit-transform: translate3d(0, 100px, 0) scale3d(0.5, 0.5, 1);*/
+    /*transform: translate3d(0, 100px, 0) sscale3d(0.5, 0.5, 1);*/
   }
 
   to {
