Chỉnh sửa giao diện

--- a/public/home/styles/responsive.css
+++ b/public/home/styles/responsive.css
@@ -65,6 +65,9 @@
 	{
 		display: none;
 	}
+	.header_social .hotline {
+		display: none;
+	}
 	.main_nav ul li:not(:last-child)
 	{
 		margin-right: 29px;
