--- a/view/home/home.pug
+++ b/view/home/home.pug
@@ -37,6 +37,7 @@ html(lang='en')
         script(src='/home/js/classyNav.min.js')
         script(src='/home/js/jquery.easing.1.3.js')
         script(src='/home/js/jquery.waypoints.min.js')
+        script(type='text/javascript' src='/js/plugins/select2.min.js')
         each item in htmlWebpackPlugin.files.js
             if item.search(/\/js\/home-?.*.js/) == 0
                 script(type='text/javascript' src=item)
