--- a/view/admin/scss/admin/3-component/_app-title.scss
+++ b/view/admin/scss/admin/3-component/_app-title.scss
@@ -36,7 +36,7 @@
 	text-align: right;
 	font-weight: 500;
 	font-size: 13px;
-	text-transform: capitalize;
+	// text-transform: capitalize;
 	padding: 0;
 	text-align: left;
 	padding: 0;
